# repo-watcher

./: .bumpversion.cfg  CHANGELOG.md  Dockerfile  Makefile  README.md  release.zsh  setup.cfg
.github/workflows/: ci.yml
repo_watcher/: enums.py  exceptions.py  repo_watcher.py  run_watcher.py  watcher.py
repo_watcher/test/: test_integration.py  test_tag_watcher.py
requirements/: dev.txt  prod.txt  test.txt
