[metadata]
name = repo_watcher
version = 1.1.0
licence = MIT
author= Korbinian Schweiger
author_email= korbinina.schweiger@gmail.com
description= Tool for watching repos on a remote source and updating them on certain triggers


[options]
python_requires = >=3.7
packages = repo_watcher
install_requires =
    click
    gitpython

[options.entry_points]
console_scripts =
    run-watcher = repo_watcher.run_watcher:cli

[flake8]
max-line-length = 88
extend-ignore = E203,E266,E402  # E203 conflicts with PEP8; see https://github.com/psf/black#slices

# flake8-pytest-style
# PT001:
pytest-fixture-no-parentheses = true
# PT006:
pytest-parametrize-names-type = tuple
# PT007:
pytest-parametrize-values-type = list
pytest-parametrize-values-row-type = tuple
# PT023:
pytest-mark-no-parentheses = true

[mypy]
disallow_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[mypy-repo_watcher.test.*]
disallow_untyped_defs = false

[isort]
profile = black


